# flash-merge-csv

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  main.rs  merger.rs
testdata/: file2.csv  file3.csv
