[package]
name = "flash-merge-csv"
version = "0.1.0"
edition = "2021"
description = "High-performance CLI tool to merge multiple large CSV files"
license = "MIT"

[dependencies]
clap              = { version = "4", features = ["derive"] }
anyhow            = "1"
indicatif         = "0.17"
csv               = "1"
memchr            = "2"       # SIMD-accelerated byte search (AVX2 on x86)
crossbeam-channel = "0.5"     # lock-free bounded channels, lower latency than mpsc
glob = "0.3.3"
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"                  # posix_fadvise for sequential read-ahead hint

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"               # removes unwinding overhead (~5% speedup)
